--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "java.project.sourcePaths": [
-        "ServerFiles\\ServerSchipe\\src",
-        "ClientFIile\\ClientSchipe\\src"
+        "ServerFiles/ServerSchipe/src",
+        "ClientFIile/ClientSchipe/src"
     ]
 }
